--- a/app/src/main/res/layout/fragment_confidentiality.xml
+++ b/app/src/main/res/layout/fragment_confidentiality.xml
@@ -15,15 +15,15 @@
             android:layout_margin="10sp"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/roboto_light"
-            android:text="Политика ООО «DokiDoki» (далее - Общество) в отношении обработки персональных данных (далее – Политика) разработана в целях обеспечения реализации требований законодательства РФ в области обработки персональных данных субъектов персональных данных.\n
+            android:text="Политика ООО «BookStore» (далее - Общество) в отношении обработки персональных данных (далее – Политика) разработана в целях обеспечения реализации требований законодательства РФ в области обработки персональных данных субъектов персональных данных.\n
 \n
 1. ОБЩИЕ ПОЛОЖЕНИЯ\n
 1.1 Действие Политики распространяется на все персональные данные субъектов, обрабатываемые Обществом с применением средств автоматизации и без применения таких средств.\n
 1.2 Политика является общедоступным документом, устанавливающим основы деятельности Общества при обработке персональных данных.\n
 \n
 2. ОПРЕДЕЛЕНИЯ\n
-2.1 Персональные данные – любая информация, относящаяся к прямо или косвенно определенному или определяемому физическому лицу (субъекту персональных данных), предоставленная, в том числе при регистрации на сайте Оператора в сети «Интернет» по адресу https://www.dokidokilalala.ru/ (далее «Сайт») и/или оформлении Заказа на Сайте, в форме онлайн-чата на Сайте, в форме обратной связи с Оператором, при обращении в Единую справочно-информационную службу Оператора, в форме подписки на новости на Сайте Оператора.\n
-2.2 Обработка персональных данных - любое действие (операция) или совокупность действий (операций), совершаемых с использованием средств автоматизации или без использования таких средств с персональными данными, включая сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных данных на срок по достижении целей обработки или до утраты необходимости в достижении этих целей, если иное не предусмотрено федеральным законом, в целях предоставления информации о товарах/услугах и условиях их приобретения у Оператора, о статусе исполнения Заказа, направления рекламных сообщений, в т.ч. о проводимых мероприятиях, акциях, специальных предложениях в сети магазинов «Читай-город» на территории Российской Федерация, для исполнения договора купли-продажи товаров, предоставление клиентской поддержки, в частности посредством обмена короткими текстовыми сообщениями в режиме онлайн-диалога в форме онлайн-чата, SMS-сообщениями, сообщениями по электронной почте, обеспечения функционирования обратного звонка при обращении в Единую справочно-информационную службу Оператора.\n
+2.1 Персональные данные – любая информация, относящаяся к прямо или косвенно определенному или определяемому физическому лицу (субъекту персональных данных), предоставленная, в том числе при регистрации на сайте Оператора в сети «Интернет» по адресу http://212.47.240.244/index/ (далее «Сайт») и/или оформлении Заказа на Сайте, в форме онлайн-чата на Сайте, в форме обратной связи с Оператором, при обращении в Единую справочно-информационную службу Оператора, в форме подписки на новости на Сайте Оператора.\n
+2.2 Обработка персональных данных - любое действие (операция) или совокупность действий (операций), совершаемых с использованием средств автоматизации или без использования таких средств с персональными данными, включая сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных данных на срок по достижении целей обработки или до утраты необходимости в достижении этих целей, если иное не предусмотрено федеральным законом, в целях предоставления информации о товарах/услугах и условиях их приобретения у Оператора, о статусе исполнения Заказа, направления рекламных сообщений, в т.ч. о проводимых мероприятиях, акциях, специальных предложениях в сети магазинов «BookStore» на территории Российской Федерация, для исполнения договора купли-продажи товаров, предоставление клиентской поддержки, в частности посредством обмена короткими текстовыми сообщениями в режиме онлайн-диалога в форме онлайн-чата, SMS-сообщениями, сообщениями по электронной почте, обеспечения функционирования обратного звонка при обращении в Единую справочно-информационную службу Оператора.\n
 \n
 3. ОСНОВНЫЕ УСЛОВИЯ ОБРАБОТКИ ПЕРСОНАЛЬНЫХ ДАННЫХ\n
 3.1 Обработка и обеспечение безопасности персональных данных осуществляется Обществом в соответствии с требованиями:\n
@@ -41,10 +41,10 @@
 5.1 Общество при обработке персональных данных принимает все необходимые меры для защиты персональных данных от неправомерного или случайного доступа к ним, уничтожения, изменения, блокирования, копирования, предоставления, распространения персональных данных, а также от иных неправомерных действий в отношении персональных данных в соответствии с требованиями действующего законодательства, в том числе, законодательства о персональных данных.\n
 \n
 6. ИНФОРМАЦИЯ ОБ ОБЩЕСТВЕ\n
-ООО «DokiDoki»\n
+ООО «BookStore»\n
 адрес (место нахождения): 625000, г. Тюмень, ул.Перикопская, дом 15а\n
 ОГРН 132459547742040,\n
 ИНН 134543211335,\n
-тел. 8-922-001-99-07"/>
+тел. 8-111-222-33-44"/>
     </RelativeLayout>
 </ScrollView>
