--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -15,9 +15,9 @@
             android:layout_margin="10sp"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/roboto_light"
-            android:text="Заказы, сделанные на сайте chitai-gorod.ru, отправляются с московского склада. Поэтому сроки доставки напрямую зависят от расстояния между Москвой и пунктом назначения.\n
+            android:text="Заказы, сделанные на сайте BookStore, отправляются с московского склада. Поэтому сроки доставки напрямую зависят от расстояния между Москвой и пунктом назначения.\n
     \n
-    Существует 3 способа получения заказов из интернет-магазина «Читай-город»: самовывоз, курьерская доставка и отправка почтой. Точную стоимость доставки Вы увидите во время оформления заказа.\n
+    Существует 3 способа получения заказов из интернет-магазина «BookStore»: самовывоз, курьерская доставка и отправка почтой. Точную стоимость доставки Вы увидите во время оформления заказа.\n
     \n
     Оплата\n
     Способ оплаты:\n
@@ -27,6 +27,6 @@
     Счета за интернет-заказы юридические лица получают на электронную почту, указанную при оформлении. Счёт придёт после передачи заказа в доставку. Вместе с заказом будут предоставлены документы: счёт, товарная накладная ТОРГ-12, счет-фактура.\n
     \n
     Порядок возврата денежных средств\n
-    В случае отказа покупателя от интернет-заказа (до получения товара покупателем), оплаченного банковской картой на сайте интернет-магазина «Читай-город», для возврата денежных средств покупателю необходимо заполнить заявление (скачать бланк) и отправить заявление почте в адрес ООО «DokiDoki»: 625000, г. Тюмень, ул.Перикопская, дом 15а, либо направить путем передачи заявления через пункты самовывоза «DokiDoki»"/>
+    В случае отказа покупателя от интернет-заказа (до получения товара покупателем), оплаченного банковской картой на сайте интернет-магазина «BookStore», для возврата денежных средств покупателю необходимо заполнить заявление (скачать бланк) и отправить заявление почте в адрес ООО «BookStore»: 625000, г. Тюмень, ул.Перикопская, дом 15а, либо направить путем передачи заявления через пункты самовывоза «BookStore»"/>
     </RelativeLayout>
 </ScrollView>
