--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -17,10 +17,10 @@
             android:fontFamily="@font/roboto_light"
             android:text="Термины и определения\n
 В настоящей оферте, если из контекста не следует иное, нижеприведенные термины имеют следующие значения и являются её составной неотъемлемой частью:\n
-«Продавец» — Индивидуальный предприниматель Рябов Константин Максимович (ИНН 134543211335, ОГРН 132459547742040, место нахождения: 625000, г. Тюмень, ул.Перикопская, дом 15а), осуществляющая предпринимательскую деятельность по продаже Товара дистанционным способом.\n
+«Продавец» — Индивидуальный предприниматель, осуществляющая предпринимательскую деятельность по продаже Товара дистанционным способом.\n
 «Покупатель» — любое физическое или юридическое лицо, принявшее (акцептировавшее) настоящую оферту на нижеуказанных условиях. Для юридических лиц условия настоящей оферты применяются в части, не противоречащей специальным нормам гражданского законодательства по поставке товара.\n
 «Зарегистрированный покупатель» — Покупатель, предоставивший Продавцу свои персональные данные посредством регистрации на Сайте, которые могут быть использованы Продавцом для оформления Заказа Покупателя.\n
-«Сайт» — www.dokidokilalala.ru\n
+«Сайт» — http://212.47.240.244/index\n
 «Интернет-магазин» — интернет-магазин товаров Продавца, размещенный на Сайте.\n
 «Товар» — объект купли-продажи (книги, журналы, канцелярские изделия и иные аналогичные товары), предложенные к продаже посредством размещения в соответствующем разделе Интернет-магазина.\n
 «Заказ» — оформленный Покупателем в Интернет-магазине запрос на покупку и доставку Товаров, выбранных Покупателем в Интернет-магазине, и предоставленный Продавцу посредством сети Интернет (электронная форма, размещенная на Сайте) и/или оформленный Покупателем по телефону.\n
@@ -65,7 +65,7 @@
 Доставка Товара осуществляется ежедневно по будням с 9.00 ч до 18.00 ч. Точное время доставки согласовывается до начала Доставки по телефону Покупателя.\n
 Стоимость Доставки до адреса Покупателя составляет 100 рублей в черте города, за город доставка осуществляется согласно прайсу Продавца, размещенному в разделе сайта Доставка.\n
 Доставка оплачивается в момент оплаты товара.\n
-5.5. Самовывоз из отделов «DokiDoki» Вы можете выбрать в качестве пункта самовывоза любой магазин сети «DokiDoki» в городах России (Адреса пунктов самовывоза указаны на сайте в разделе «Контакты») .\n
+5.5. Самовывоз из отделов «BookStore» Вы можете выбрать в качестве пункта самовывоза любой магазин сети «BookStore» в городах России (Адреса пунктов самовывоза указаны на сайте в разделе «Контакты») .\n
 После комплектации заказа посылка доставляется до точки самовывоза за 2-3 дня. Как только заказ будет доставлен, мы свяжемся с вами, и вы сможете забрать свой заказ по выбранному ранее адресу.\n
 Также в личном кабинете вы можете отслеживать статус заказа.\n
 Готовый заказ хранится в магазине 14 дней с даты доставки в пункт самовывоза.\n
@@ -88,7 +88,7 @@
 \n
 6.2. Предусмотрена оплата наличными при самовывозе и доставке до Покупателя.\n
 Предоставляется возможность оплатить заказ при получении на точке выдачи.\n
-Плата за доставку до точек самовывоза отделов «DokiDoki» не взимается.\n
+Плата за доставку до точек самовывоза отделов «BookStore» не взимается.\n
 6.3. Оплата наличными при доставке Почтой России.\n
 Предоставляется возможность отправки посылки наложенным платежом с оплатой при получении в отделении Почты России.\n
 Стоимость доставки вычисляется автоматически при оформлении заказа.\n
@@ -99,7 +99,7 @@
 Возврат товара надлежащего качества возможен в случае, если сохранены его товарный вид, потребительские свойства, а также документ, подтверждающий факт и условия покупки указанного товара. Отсутствие у покупателя указанного документа не лишает его возможности ссылаться на другие доказательства приобретения товара у данного продавца.\n
 При отказе покупателя от товара продавец должен возвратить ему сумму, уплаченную покупателем в соответствии с договором, за исключением расходов продавца на доставку от покупателя возвращенного товара, не позднее чем через 10 дней с даты предъявления покупателем соответствующего требования.\n
 7.2. Порядок возврата денежных средств: возврат осуществляется наличными денежными средствами или безналичным перечислением на основании заявления Покупателя.\n
-7.3. Возврат Товара Продавцу в случае отказа осуществляется в следующем порядке: Покупатель должен оформить заявление на возврат на сайте или на точках самовывоза, указанных в разделе сайта «Контакты». Заявление на возврат может быть оформлено и в адресе нахождения Продавца (г. Ижевск, 9ая Подлесная, дом 2). Товар передается Покупателем по акту приема-передачи уполномоченному представителю Продавца (в точках самовывоза — продавец, в офисе — уполномоченное лицо на основании доверенности). Возврат товара возможен только в случае сохранения товарного вида Заказа (отсутствие следов пользования, отсутствие повреждений и т.п.).\n
+7.3. Возврат Товара Продавцу в случае отказа осуществляется в следующем порядке: Покупатель должен оформить заявление на возврат на сайте или на точках самовывоза, указанных в разделе сайта «Контакты». Заявление на возврат может быть оформлено и в адресе нахождения Продавца. Товар передается Покупателем по акту приема-передачи уполномоченному представителю Продавца (в точках самовывоза — продавец, в офисе — уполномоченное лицо на основании доверенности). Возврат товара возможен только в случае сохранения товарного вида Заказа (отсутствие следов пользования, отсутствие повреждений и т.п.).\n
 \n
 8. Ответственность сторон\n
 8.1. За неисполнение или ненадлежащее исполнение условий настоящего Договора (акцептованной Покупателем оферты Продавца) Стороны несут ответственность в соответствии с законодательством Российской Федерации.\n
